# fundverse-backend

./: .env  .gitignore  Cargo.toml
src/: auth.rs  campaigns.rs  main.rs  ml.rs  models.rs
